fix double scroll in responsive

--- a/src/components/card-list/CardList.css
+++ b/src/components/card-list/CardList.css
@@ -6,3 +6,7 @@
     width: 100%;
     height: 100%;
 }
+
+.card-list-container{
+    padding-bottom: 8px;
+}
