--- a/src/components/layout/Layout.css
+++ b/src/components/layout/Layout.css
@@ -10,14 +10,15 @@
   width: 100vw;
   overflow: hidden;
 
+
   @media screen and (max-width: 1080px) {
     grid-template-areas:
       "sidebar sidebar sidebar"
       "filter filter filter"
       "main main main"
-      "widget widget widget";
+      "main main main";
 
-    height: 100%;
+    height: 100vh;
     overflow-y: scroll;
   }
 
@@ -47,10 +48,12 @@
     height: 100%;
     overflow-y: scroll;
 
+
     .content {
       height: 100vh;
       align-items: center;
       padding: 8px 20px;
+          margin-bottom: 12px;
     }
   }
 
@@ -62,6 +65,7 @@
 
      @media screen and (max-width: 1080px) {
          padding:20px;
+         display: none;
       }
   }
 }
