--- a/src/components/widget-card/WidgetCard.css
+++ b/src/components/widget-card/WidgetCard.css
@@ -1,5 +1,6 @@
 .widget-card {
   width: 100%;
+  padding-bottom: 12px;
 
   .widget-container {
     width: 100%;
